--- a/JAVASCRIPT/spaceInvader/index.html
+++ b/JAVASCRIPT/spaceInvader/index.html
@@ -12,31 +12,41 @@
   <div class="wrap">
     <header>Space Game</header>
     <div class="game-wrapper">
+      <p class="dashboard roundCounter">Round: 0</p>
+      <p class="dashboard coinsCounter">Coins: 0</p>
       <div class="game"></div>
       <div class="congratulations">
-        <h1>Congratulations!</h1>
-        <h2>You won the game</h2>
-        <button class="btn" onclick="window.location.reload()">Restart</button>
+        <h1>Round Complete</h1>
+        <h2>You beat the round</h2>
+        <button class="menuPlay">Next Round</button>
+        <button class="menuShop">Shop</button>
       </div>
       <div class="game-over">
         <h1>GAME OVER</h1>
         <h2>You lost the game</h2>
-        <button class="btn" onclick="window.location.reload()">Restart</button>
+        <button class="btn">Restart</button>
       </div>
       <div class="shop">
         <h1>Shop</h1>
         <h2>Purchase upgrades for your ship</h2>
           <div class="purchaseItems">
-          <div class="speed">
-            <button>Speed</button>
+            <div class="speed shopItem">
+              <p>Speed</p>
+              <button class="speedButton"></button>
+              <div class="displayFrame speedFrame"></div>
+            </div>
+            <div class="fireRate shopItem">
+              <p>Fire rate</p>
+              <button class="fireButton"></button>
+              <div class="displayFrame fireFrame"></div>
+            </div>
+            <div class="health shopItem">
+              <p>Health</p>
+              <button class="healthButton"></button>
+              <div class="displayFrame healthFrame"></div>
+            </div>
           </div>
-          <div class="fireRate">
-            <button>Fire rate</button>
-          </div>
-          <div class="health">
-            <button>Health</button>
-          </div>
-        </div>
+          <button class="menuPlay">Play</button>
       </div>
       <div class="menu">
         <h1>Menu</h1>
