Refactored code for spaceinvader

--- a/JAVASCRIPT/spaceInvader/index.html
+++ b/JAVASCRIPT/spaceInvader/index.html
@@ -29,23 +29,7 @@
       <div class="shop">
         <h1>Shop</h1>
         <h2>Purchase upgrades for your ship</h2>
-          <div class="purchaseItems">
-            <div class="speed shopItem">
-              <p>Speed</p>
-              <button class="speedButton"></button>
-              <div class="displayFrame speedFrame"></div>
-            </div>
-            <div class="fireRate shopItem">
-              <p>Fire rate</p>
-              <button class="fireButton"></button>
-              <div class="displayFrame fireFrame"></div>
-            </div>
-            <div class="health shopItem">
-              <p>Health</p>
-              <button class="healthButton"></button>
-              <div class="displayFrame healthFrame"></div>
-            </div>
-          </div>
+          <div class="purchaseItems"></div>
           <button class="menuPlay">Play</button>
       </div>
       <div class="menu">
